--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>WuX-UI Debug Page</title>
+    <link rel="icon" href="./icon.png" />
+    <title>WuX-UI for React.js</title>
     <script defer="defer" src="./static/js/main.index.js"></script>
     <link href="https://wux-ui.tk/dist/wux.css" rel="stylesheet">
 </head>
