--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
     <link rel="icon" href="./icon.png" />
     <title>WuX-UI for React.js</title>
     <script defer="defer" src="./static/js/main.index.js"></script>
