--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
     <link rel="icon" href="./icon.svg" />
-    <title>WuX-UI for React.js</title>
-    <script defer="defer" src="./static/js/main.index.js"></script>
-    <link href="https://wux-ui.tk/dist/wux.css" rel="stylesheet">
+    <title>WuX-UI for React.js (Debug Page)</title>
+    <script defer="defer" src="./static/js/main.debug.js"></script>
+    <link href="https://wux-ui.tk/src/css/wux.css" rel="stylesheet">
 </head>
 
 <body>
