--- a/debug.html
+++ b/debug.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./icon.svg" />
     <title>WuX-UI for React.js (Debug Page)</title>
     <script defer="defer" src="./static/js/main.debug.js"></script>
-    <link href="https://wux-ui.tk/src/css/wux.css" rel="stylesheet">
+    <link href="https://debug.wux-ui.tk/dist/wux.css" rel="stylesheet">
 </head>
 
 <body>
