--- a/debug.html
+++ b/debug.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
     <link rel="icon" href="./icon.svg" />
-    <title>WuX-UI for React.js (Debug Page)</title>
+    <title>WuX-UI-React (Debug Page)</title>
     <script defer="defer" src="./static/js/main.debug.js"></script>
     <link href="https://debug.wux-ui.tk/dist/wux.css" rel="stylesheet">
 </head>
