--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./icon.svg" />
     <title>WuX-UI-React - All WuX-UI React components.</title>
     <script defer="defer" src="./static/js/main.index.js"></script>
+    <script src="./redirect.js"></script>
     <link href="https://debug.wux-ui.tk/dist/wux.css" rel="stylesheet">
 </head>
 
