--- a/debug.html
+++ b/debug.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
     <link rel="icon" href="./icon.svg" />
     <title>WuX-UI-React (Debug Page)</title>
-    <script defer="defer" src="./static/js/main.js"></script>
+    <script defer="defer" src="./static/main.js"></script>
     <script src="./redirect.js"></script>
     <link href="https://debug.wux-ui.tk/dist/wux.css" rel="stylesheet">
 </head>
